--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <script type="module" src="/script.js" defer></script>
-    <!-- <script type="module" src="/arcadeRenderer.js" defer></script> -->
+    <link rel="stylesheet" href="/style.css">
     <title>Jonathan Liu - Arcade</title>
-    <style>
-        body { margin: 0; }
-    </style>
 </head>
 <body>
 </body>
