create dialogue box styling

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
     <title>Jonathan Liu - Arcade</title>
 </head>
 <body>
+    <template>
+        <div class="dialogue-box">
+            <p class="dialogue">
+                Dialogue Here
+            </p>
+        </div>
+    </template>
 </body>
 </html>
