remove template wrapper

--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <script type="module" src="/script.js" defer></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Jonathan Liu - Arcade</title>
 </head>
 <body>
-    <template>
-        <div class="dialogue-box">
-            <p class="dialogue">
-                Dialogue Here
-            </p>
-        </div>
-    </template>
+    <div id="dialogue-box" class="dialogue-box">
+        <p class="dialogue">
+            Dialogue Here
+        </p>
+    </div>
 </body>
 </html>
