add clerk name tag to dialogue box

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <div id="dialogue-box" class="dialogue-box">
-        <p class="dialogue">
+        <p id="clerk-name" class="dialogue">Clerk</p>
+        <p id="dialogue-text" class="dialogue">
             Dialogue Here
         </p>
     </div>
