add indicator when dialogue is finished printing

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <p id="dialogue-text" class="dialogue">
             Dialogue Here
         </p>
+        <p id="next-prompt" class="dialogue">🢓</p>
     </div>
 </body>
 </html>
