--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Jonathan Liu - Arcade</title>
 </head>
 <body>
+    <div id="dialogue-options">
+        <button id="projects" class="dialogue option">option 1</button>
+        <button id="interests" class="dialogue option">option 2</button>
+        <button id="skills" class="dialogue option">option 3</button>
+        <button id="education" class="dialogue option">option 4</button>
+    </div>
     <div id="dialogue-box" class="dialogue-box">
         <p id="clerk-name" class="dialogue">Clerk</p>
         <p id="dialogue-text" class="dialogue">
