add button for closing dialogue

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button id="interests" class="dialogue option">option 2</button>
         <button id="skills" class="dialogue option">option 3</button>
         <button id="education" class="dialogue option">option 4</button>
+        <button id="close" class="dialogue option">option 5</button>
     </div>
     <div id="dialogue-box" class="dialogue-box">
         <p id="clerk-name" class="dialogue">Clerk</p>
