add html section for project information

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <title>Jonathan Liu - Arcade</title>
 </head>
 <body>
+    <!-- Game UI Components -->
+    <div id="project" class="dialogue-box">
+        <h1 id="project-name">Project Title Here</h1>
+        <img id="project-image" src="">
+        <p id="project-description">This is a game I made lel</p>
+        <button id="project-close">Close</button>
+    </div>
     <div id="dialogue-options">
         <button id="projects" class="dialogue option">option 1</button>
         <button id="interests" class="dialogue option">option 2</button>
