modify html for project preview

--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
     <!-- Game UI Components -->
     <div id="project" class="dialogue-box">
         <h1 id="project-name">Project Title Here</h1>
-        <img id="project-image" src="">
+        <div id="preview-carousel">
+            <!-- Place Images In This Div -->
+            <div id="preview-images"></div>
+            <button id="prev-preview" class="carousel-button">🢐</button>
+            <button id="next-preview" class="carousel-button">🢒</button>
+        </div>
         <p id="project-description">This is a game I made lel</p>
+        <p id="project-credits">Some credits here</p>
         <button id="project-close">Close</button>
     </div>
+
     <div id="dialogue-options">
         <button id="projects" class="dialogue option">option 1</button>
         <button id="interests" class="dialogue option">option 2</button>
