move css relating to dialogue to separate file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <script type="module" src="/script.js" defer></script>
     <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/dialogue.css">
+    <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Jonathan Liu - Arcade</title>
 </head>
