--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
         <h1 id="project-name">Project Title Here</h1>
         <div id="preview-carousel">
             <!-- Place Images In This Div -->
-            <div id="preview-images"></div>
-            <button id="prev-preview" class="carousel-button">‹</button>
-            <button id="next-preview" class="carousel-button">›</button>
+            <img id="preview-images">
+            <button id="prev-preview" class="carousel-button left">‹</button>
+            <button id="next-preview" class="carousel-button right">›</button>
         </div>
         <p id="project-description">This is a game I made lel</p>
-        <p id="project-credits">Some credits here</p>
         <button id="project-close">
             <p id="project-close-label">»</p>
         </button>
