--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <button id="prev-preview" class="carousel-button left">‹</button>
             <button id="next-preview" class="carousel-button right">›</button>
         </div>
-        <p id="project-description">This is a game I made lel</p>
+        <p id="project-description">This is a game I made</p>
         <button id="project-close">
             <p id="project-close-label">»</p>
         </button>
     </div>
-
+    <div id="background-dim"></div>
     <div id="dialogue-options">
         <button id="projects" class="dialogue option">option 1</button>
         <button id="interests" class="dialogue option">option 2</button>
