add site title to loading screen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- Game UI Components -->
      <div id="load-screen">
         <div>
+            <p id="site-title">PROJECT ARCADE</p>
             <img id="load-icon" src="images/icons/loading-icon.gif">
             <button id="enter-button">Enter Arcade</button>
         </div>
