--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img id="load-icon" src="images/icons/loading-icon.gif">
             <button id="enter-button">Enter Arcade</button>
         </div>
-        <p id="load-message">Loading Arcade...</p>
+        <p id="load-message">Now Loading...</p>
      </div>
     <div id="project" class="project-box">
         <h1 id="project-name">Project Title Here</h1>
