implement audio for music and sound effects for arcade interaction

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <title>Jonathan Liu - Arcade</title>
 </head>
 <body>
+    <!-- Audio players -->
+     <audio id="bgm" src="audio/music/bgm.mp3"></audio>
     <!-- Loading Screen -->
      <div id="load-screen">
         <div>
