implement hint box

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             <img src="images/icons/sfx-icon.png" class="gui-icon">
         </button>
     </div>
+    <!-- Hint Prompt -->
+     <div id="hint-box">
+        <p id="gui-hint"></p>
+     </div>
     <!-- Help Window -->
     <div id="help-box">
         <p id="help-instructions"></p>
