--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 id="project-name">Project Title Here</h1>
         <div id="preview-carousel">
             <!-- Place Images In This Div -->
-            <img id="preview-images">
+            <img id="preview-images" draggable="false">
             <button id="prev-preview" class="carousel-button left">‹</button>
             <button id="next-preview" class="carousel-button right">›</button>
         </div>
