add preloading to fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <script type="module" src="js/script.js" defer></script>
+    <!-- Font Preloading -->
+    <link rel="preload" href="/fonts/PixelifySans.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/Aldrich-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/NotoSansSymbols2-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <!-- Style Sheets -->
     <link rel="stylesheet" href="css/loading.css">
     <link rel="stylesheet" href="css/gui.css">
     <link rel="stylesheet" href="css/animation.css">
