create load bar visuals

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <img id="load-icon" src="images/icons/loading-icon.gif">
             <button id="enter-button">Enter Arcade</button>
         </div>
+        <div id="load-bar">
+            <div id="load-progress"></div>
+        </div>
         <p id="load-message">Now Loading...</p>
      </div>
      <!-- GUI Buttons -->
