add game embedding to arcade machine

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
      <!-- Project Window -->
     <div id="project" class="project-box">
         <h1 id="project-name">Project Title Here</h1>
+        <div id="game-embed"></div>
         <div id="preview-carousel">
             <!-- Place Images In This Div -->
             <img id="preview-images" draggable="false">
