add play button to project window

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <p id="help-instructions"></p>
         <button id="help-close">Close</button>
     </div>
-     <!-- Project Window -->
+    <!-- Project Window -->
     <div id="project" class="project-box">
         <h1 id="project-name">Project Title Here</h1>
-        <div id="game-embed"></div>
+        <button id="play-embed">Play Now</button>
         <div id="preview-carousel">
             <!-- Place Images In This Div -->
             <img id="preview-images" draggable="false">
@@ -63,6 +63,13 @@
             <button id="next-preview" class="carousel-button right">›</button>
         </div>
         <p id="project-description">This is a game I made</p>
+        <button id="project-close">
+            <p id="project-close-label">»</p>
+        </button>
+    </div>
+    <!-- Embed Window -->
+    <div id="game-embed">
+
         <button id="project-close">
             <p id="project-close-label">»</p>
         </button>
