connect play now button to opening embed modal

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         </button>
     </div>
     <!-- Embed Window -->
-    <div id="game-embed">
-
-        <button id="project-close">
-            <p id="project-close-label">»</p>
+    <div id="embed-window">
+        <div id="game-embed"></div>
+        <button id="embed-close">
+            <p id="embed-close-label">X</p>
         </button>
     </div>
     <!-- Dialogue Windows -->
