complete game embed stylization and functionality

--- a/index.html
+++ b/index.html
@@ -69,10 +69,8 @@
     </div>
     <!-- Embed Window -->
     <div id="embed-window">
+        <button id="embed-close">X</button>
         <div id="game-embed"></div>
-        <button id="embed-close">
-            <p id="embed-close-label">X</p>
-        </button>
     </div>
     <!-- Dialogue Windows -->
     <div id="background-dim"></div>
